Hide navigations aborted due to downloading from ntp

If a navigation was started by an HTMLAnchorElement with a download
attribute (<a download>), the navigation will end up being aborted,
and turned into a download, so leaving the URL around for the user to
edit is not useful.

BUG=808966
R=creis@chromium.org,pkasting@chromium.org

Change-Id: Idcfa5c952cba7933fdf62e75a67ec4a2e2087695
Reviewed-on: https://chromium-review.googlesource.com/908451
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Charlie Reis <creis@chromium.org>
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541471}
Former-commit-id: 9f9789e92c7adb2d86b91ec3f7c1bcce3770b77e