content/browser/frame_host/render_frame_host_manager.cc
@@ -508,9 +508,12 @@ RenderFrameHostImpl* RenderFrameHostManager::GetFrameHostForNavigation(
       // already updated its state properly, and doesn't need to be notified.
       if (speculative_render_frame_host_->GetNavigationHandle() &&
           request.from_begin_navigation()) {
+        DCHECK(!speculative_render_frame_host_->GetNavigationHandle()
+                    ->IsDownload());
         frame_tree_node_->navigator()->DiscardPendingEntryIfNeeded(
             speculative_render_frame_host_->GetNavigationHandle()
-                ->pending_nav_entry_id());
+                ->pending_nav_entry_id(),
+            false /* is_download */);
       }
       DiscardUnusedFrame(UnsetSpeculativeRenderFrameHost());
     }
@@ -547,9 +550,12 @@ RenderFrameHostImpl* RenderFrameHostManager::GetFrameHostForNavigation(
       if (speculative_render_frame_host_ &&
           speculative_render_frame_host_->GetNavigationHandle() &&
           request.from_begin_navigation()) {
+        DCHECK(!speculative_render_frame_host_->GetNavigationHandle()
+                    ->IsDownload());
         frame_tree_node_->navigator()->DiscardPendingEntryIfNeeded(
             speculative_render_frame_host_->GetNavigationHandle()
-                ->pending_nav_entry_id());
+                ->pending_nav_entry_id(),
+            false /* is_download */);
       }
 
       // If a previous speculative RenderFrameHost didn't exist or if its
